# MEPhI-S3

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  my_test.cpp  tmn.cpp
VFS/: _vfs.md
VFS/gui/: View.cpp  View.hpp  handling_files.cpp  handling_groups.cpp  handling_users.cpp  help.cpp
VFS/include/: CMakeLists.txt  FileDescriptor.hpp  Group.hpp  User.hpp  Utils.hpp  VFS.hpp  _fd.md  vfs_constants.hpp
VFS/src/: FileDescriptor.cpp  Group.cpp  User.cpp  Utils.cpp  VFS.cpp  vfs_files.cpp  vfs_groups.cpp  vfs_init.cpp  vfs_save.cpp  vfs_users.cpp
gui/L1/: console_ui_l1  main.cpp
gui/L2/: CMakeLists.txt  Comparators.cpp  Generator.cpp  Generator.hpp  SortView.cpp  SortView.hpp  Transaction.cpp  Transaction.hpp  VisualSorters.cpp  VisualSorters.hpp  main.cpp
gui/L3/: Authorization.cpp  AuthorizationScreen.cpp  MainScreen.cpp  NewFileScreen.cpp  NewGroupScreen.cpp  NewUserScreen.cpp  main.cpp
gui/L4/: CMakeLists.txt  Commands.cpp  GraphView.cpp  GraphView.hpp  Help.cpp  main.cpp
gui/L4/Controller/: Controller.cpp  Controller.hpp  Initializer.cpp
gui/L4/GraphViz/: colorgraph.dot  graph.dot
gui/L4/View/: GraphVisualizer.hpp
include/: tmn.hpp  tmn_strategy.hpp
include/Adapter/: Queue.hpp  Stack.hpp
include/Associative/: Hash.hpp  HashSet.hpp  HashTable.hpp  Map.hpp  _hashtable.md  _redblacktree.md  readme.md
include/Exceptions/: AllocException.hpp  CMakeLists.txt  Exception.hpp  IOException.hpp  LogicException.hpp  RuntimeException.hpp
include/Function/: Function.hpp
include/Graph/: Graph.hpp  GraphTest.hpp  MultiWeightGraph.hpp  MultiWeightGraphEdge.hpp  SingleWeightGraph.hpp  SingleWeightGraphEdge.hpp  TransitNetwork.hpp  UnweightedGraph.hpp  WeightedGraph.hpp  WeightedGraphEdge.hpp
include/Graph/TransitNetwork/: CMakeLists.txt  TransitNetwork.cpp  TransitNetwork.hpp  UnitClasses.cpp  UnitClasses.hpp  main.cpp
include/Iterator/: Iterator.hpp
include/Optional/: Optional.hpp
include/Pair/: Pair.hpp
include/Sequence/: Array.hpp  ArraySequence.hpp  DynamicArray.hpp  List.hpp  ListSequence.hpp  Sequence.hpp
include/SmartPtr/: SharedPtr.hpp  UniquePtr.hpp
include/Sort/: SmartSequence.hpp  Sort.hpp
include/Tuple/: Tuple.hpp
include/VFS/: CMakeLists.txt  Controller.hpp  FileDescriptor.hpp  FileInfo.hpp  Group.hpp  User.hpp  Utils.hpp  VFS.hpp  VFSController.hpp  _vfs.md
script/: Graph.cpp  Graph.hpp  L1.py  L1_UNIQUEPTR.py  L3.cpp  L3_Graphs.cpp  L3_HASHSET.py  L3_HASHTABLE.py
script/PLOT_SFML/: CMakeLists.txt  area.cpp  axis.cpp  curve.cpp  curve.hpp  grid.hpp  plot.cpp  plot.hpp
script/SFML-plot/: area.hpp  axis.cpp  axis.hpp  curve.cpp  grid.cpp  grid.hpp  line.cpp  line.hpp  plot.cpp  plot.hpp
src/: tmn.tpp
src/Adapter/: Queue.tpp  Stack.tpp
src/Associative/: HashSet.tpp  HashTable.tpp  Map.tpp
src/Exceptions/: AllocException.cpp  AllocException.h  Exception.cpp  Exception.h  IOException.cpp  IOException.h  LogicException.cpp  LogicException.h  RuntimeException.cpp  RuntimeException.h
src/Function/: Function.tpp
src/Graph/: MultiWeightGraph.tpp  SingleWeightGraph.tpp  UnweightedGraph.tpp  WeightedGraph.tpp
src/Iterator/: Iterator.tpp
src/Optional/: Optional.cpp  Optional.hpp  Optional.tpp
src/Pair/: Pair.tpp
src/Sequence/: Array.cpp  Array.tpp  ArraySequence.tpp  DynamicArray.cpp  List.cpp  ListSequence.tpp
src/SmartPtr/: CMakeLists.txt  SharedPtr.cpp  SharedPtr.tpp  UniquePtr.cpp  UniquePtr.tpp
src/SmartPtr/SharedPtr/: SharedPtr.cpp  SharedPtr.h  SharedPtr.hpp
src/SmartPtr/UniquePtr/: UniquePtr.cpp  UniquePtr.h  UniquePtr.hpp
src/Sort/: SmartSequence.tpp  Sort.tpp
src/Tuple/: Tuple.tpp
src/VFS/: FileDescriptor.cpp  FileInfo.cpp  Group.cpp  User.cpp  Utils.cpp  VFS.cpp  VFS.hpp  VFSController.cpp  _vfs.md
test/Function/: CMakeLists.txt  functional_test_function.cpp
test/Graph/: CMakeLists.txt  functional_test_multiweighted_graph.cpp  functional_test_singleweighted_graph.cpp  functional_test_unweighted_graph.cpp  functional_test_weighted_graph.cpp  graph_test_utils.cpp  graph_test_utils.hpp  graph_test_utils.tpp  load_test_bfs_singleweighted_graph.cpp  load_test_bfs_unweighted_graph.cpp  load_test_coloring_singleweighted_graph.cpp  load_test_coloring_unweighted_graph.cpp  load_test_dfs_singleweighted_graph.cpp  load_test_dfs_unweighted_graph.cpp  load_test_dfs_weighted_graph.cpp  plot_graph_data.cpp  test_make_graph.cpp
test/Graph/LoadTestResults/: load_test_bfs_weighted_graph.txt  load_test_coloring_weighted_graph.txt  load_test_dfs_weighted_graph.txt
test/Hash/: CMakeLists.txt  HashTest.cpp  functional_test_hashset.cpp  functional_test_hashtable.cpp  load_test_hashset.cpp  load_test_hashtable.cpp  parse_testdata.cpp  plot_data.cpp  test_hash.cpp
test/HashSet/: FuncTestHashSet.cpp  LoadTestHashSet.cpp
test/HashTable/: FuncTestHashTable.cpp  LoadTestHashTable.cpp
test/SmartPtr/: CMakeLists.txt  FuncTestSharedPtr.cpp  FuncTestUniquePtr.cpp  LoadTestUniquePtr.cpp  functional_test_sharedptr.cpp  functional_test_uniqueptr.cpp  load_test_uniqueptr.cpp
test/SmartSequence/: CMakeLists.txt  functional_test_smartseq.cpp
test/Sort/: CMakeLists.txt  functional_test_sortalgs.cpp  plot.cpp
test/TransitNetwork/: CMakeLists.txt  functional_test_transitnetwork.cpp
test/Tuple/: CMakeLists.txt  FuncTestTuple.cpp  functional_test_tuple.cpp
test/VFS/: CMakeLists.txt  FileInfoTest.cpp  GroupTest.cpp  IndexTableTest.cpp  LoadTestIndexTable.cpp  UserTest.cpp  VFSTest.cpp  _filename.txt  _username.txt  functional_test_fd.cpp  functional_test_user.cpp  test_direct_search.cpp  test_indirect_search.cpp  test_vfs.cpp  utils_for_tests.cpp
test/_test_results/: direct_search_test_indextable.txt  indirect_search_test_indextable.txt  load_test_hashset.txt  load_test_hashtable.txt  load_test_unorderedmap.txt  load_test_unorderedset.txt
test/include/: FuncTestSharedPtr.hpp  FuncTestUniquePtr.hpp  LoadTestSharedPtr.hpp  LoadTestUniquePtr.hpp
test/src/: FuncTestSharedPtr.cpp  FuncTestUniquePtr.cpp  LoadTestSharedPtr.cpp  LoadTestUniquePtr.cpp  TestSharedPtr.cpp  TestUniquePtr.cpp
(+10 files in other folders)
